--- a/estilo/basico.css
+++ b/estilo/basico.css
@@ -1,11 +1,32 @@
 .btn {
-    background-color: rgb(113, 50, 230);
-    color: rgb(226, 217, 245);
+    background-color: rgb(159, 105, 221);
+    color: rgb(226, 216, 247);
     text-align: center;
-    width: 30%;
-    font-size: 20px;
+    width: 100%;
+    font-size: 26px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    
 }
-
+.aba{
+    width: 100%;
+    height: 400px;
+}
+#aba1{
+    background-color: rgb(207, 102, 207);
+}
+#aba2{
+    background-color: rgb(39, 182, 115);
+}
+#aba3{
+    background-color: rgb(120, 58, 190);
+}
+#aba4{
+    background-color: rgb(39, 182, 115);
+}
+#aba5{
+    background-color: rgb(120, 58, 190);
+}
 .conteudo{
     text-align: center;
 }
@@ -17,7 +38,7 @@ body {
     width: 100%;
     height: 70px;
     text-align: center;
-    background-color: rgb(207, 157, 223);
+    background-color: rgb(172, 184, 241);
 }
 
 .desktop {
@@ -47,12 +68,12 @@ body {
         color: rgb(23, 25, 153);
     }
    .btn{
-    margin-top: 0;
-    width: 55px;
-    font-size: 16px;
+    margin-top: 0%;
+    width: 19%;
+   
    }
    .conteudo {
-    text-align: right;
+    text-align: center;
    }
 
 }
@@ -71,6 +92,12 @@ body {
         color: rgb(100, 0, 70);
     }
     .conteudo{
-        text-align: left;
+        text-align:center;
     }
+    .btn{
+    margin-top: 0;
+    width: 100px;
+    font-size: 16px;
+    border-radius: 10%;
+}
 }
