--- a/estilo/basico.css
+++ b/estilo/basico.css
@@ -1,103 +1,109 @@
 .btn {
-    background-color: rgb(159, 105, 221);
-    color: rgb(226, 216, 247);
-    text-align: center;
-    width: 100%;
+    background-color: rgb(5, 5, 73);
     font-size: 26px;
+    color: whitesmoke;
+    width: 100%;
     padding-top: 4px;
     padding-bottom: 4px;
-    
+}
+#btn1{
+    background-color: rgb(212, 78, 194);
+}
+#btn2{
+    background-color: rgb(226, 94, 160);
+}
+#btn3{
+    background-color: rgb(173, 18, 134);
+}
+#btn4{
+    background-color: rgb(238, 122, 222);
+}
+#btn5{
+    background-color: rgb(194, 4, 153);
 }
 .aba{
     width: 100%;
-    height: 400px;
+    height:400px;
 }
 #aba1{
-    background-color: rgb(207, 102, 207);
+    background-color: rgb(176, 102, 199);
 }
 #aba2{
-    background-color: rgb(39, 182, 115);
+    background-color: rgb(199, 59, 180);
 }
 #aba3{
-    background-color: rgb(120, 58, 190);
+    background-color: rgb(197, 94, 171);
 }
 #aba4{
-    background-color: rgb(39, 182, 115);
+    background-color: rgb(204, 84, 158);
 }
 #aba5{
-    background-color: rgb(120, 58, 190);
+    background-color: rgb(204, 113, 189);
 }
 .conteudo{
-    text-align: center;
+   text-align: center;
 }
 
-body {
-    background-color: rgb(221, 217, 245);
+body{
+    background-color: rgb(255, 255, 255);
 }
-.barra {
+.barra{
     width: 100%;
     height: 70px;
     text-align: center;
-    background-color: rgb(172, 184, 241);
+    background-color: rgb(54, 6, 54);
+    color: white;
 }
-
-.desktop {
+.tablet{
     display: none;
 }
-
-.tablet {
+.desktop{
     display: none;
 }
-
 .mobile{
     font-size: 50px;
-    color: rgb(85, 27, 177);
+    color: whitesmoke;
 }
-
-@media (min-width:800px){
-    .barra{
-        background-color: rgb(172, 184, 241);
-        height: 80px;
+@media (min-width:800px) {
+    .btn{
+     width: 19.7%;
+     margin-top: 0%;
     }
-    .mobile{
-        display: none;
-    }
-    .tablet{
-        display: inline;
-        font-size: 55px;
-        color: rgb(23, 25, 153);
-    }
-   .btn{
-    margin-top: 0%;
-    width: 19%;
-   
+   .barra{
+    background: rgb(212, 55, 128);
+    height: 80px;
    }
-   .conteudo {
+   .conteudo{
     text-align: center;
+ }
+   .mobile{
+    display: none;
    }
-
+   .tablet{
+    display: inline;
+    color: black;
 }
 
+}
 @media (min-width:1228px) {
+    .btn{
+        width: 100px;
+        height: 50px;
+        font-size: 20px;
+        margin-top: 0%;
+       }
     .barra{
-        background-color: rgb(230, 127, 199);
-        height: 120px;
-    }
-    .tablet{
-        display: none;
-    }
-    .desktop{
-        display: inline;
-        font-size: 70px;
-        color: rgb(100, 0, 70);
+     background:rgb(99, 119, 209) ;
+     height: 120px;
     }
     .conteudo{
-        text-align:center;
+        text-align: center
+     }
+    .tablet{
+     display: none;
+ }
+    .desktop{
+        display: inline;
+        font-size: 100px;
     }
-    .btn{
-    margin-top: 0;
-    width: 100px;
-    font-size: 16px;
-    border-radius: 10%;
-}
-}
+ }
